# travel-assistant

./: .env.example  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE_FLOW.md  COMPLETION_SUMMARY.md  DOCUMENTATION.md  METRICS_DOCUMENTATION.md  README.md  REQUIREMENTS_VERIFICATION.md  SUBMISSION_CHECKLIST.md  main.py  output.txt  pyproject.toml  requirements.txt  test.py  test_models.py  test_server.py
app/: __init__.py  config.py  models.py
app/data/: example_cache.json  user_history.json
app/routers/: __init__.py  dashboard.py  travel.py
app/services/: __init__.py  example_cache.py  few_shot_selector.py  gemini_client.py  metrics_tracker.py  prompt_templates.py  token_counter.py  travel_service.py  travel_service_new.py  user_history.py
app/templates/: dashboard.html  index.html
app/utils/: __init__.py  logging_utils.py
tests/: __init__.py  test_travel_assistant.py
