[project]
name = "travel-assistant-api"
version = "0.1.0"
description = "Travel Assistant API using Google Gemini models with LangChain and FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langchain",
    "langchain-google-genai",
    "google-generativeai",
    "python-dotenv>=1.2.1",
    "pydantic",
    "pydantic-settings",
    "pytest",
    "httpx",
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]
