[project]
name = "travel-assistant-api"
version = "0.1.0"
description = "Travel Assistant API using Google Gemini models with LangChain and FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "langchain>=0.3.17",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.10",
    "google-generativeai>=0.8.4",
    "tiktoken>=0.8.0",
    "python-dotenv>=1.2.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "httpx>=0.27.0",
]
